@@ -6,6 +6,7 @@
   "Gscan2pdf::Tesseract: support output to stdout instead of temporary file"
 * Make RTL test work for other versions of ImageMagick.
   Closes bug #246 (t/​357_unpaper_rtl.t test fails).
+* Improve support for button-type scan options.
 
 
 1.8.0 (12.04.2017):
